added CSS to project

--- a/index.html
+++ b/index.html
@@ -18,15 +18,24 @@
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
+      <ul>
        <li>The head element contains information about the webpage.</li>
        <li>The body element represents the visible content shown to the user.</li>
+       <li>HTML attributes are always defined in the beginning element, never the closing element.</li>
+       <li>The title element defines the title for a webpage. This element is required and is extremely important for Search Engine Optimization (SEO).</li>
+       <li>The style element defines the CSS styles associated with a website.</li>
+       <li>The base element defines the base URL for a webpage.</li>
+       <li>The link element connects an external resource to the HTML document.</li>
+       <li>The meta element defines metadata such as the character set, description, keywords, author, and viewport.</li>
      </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
      <ul>
-       <li>Enter your CSS notes here</li>
+       <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
+       <li>A margin property indicates how much space we want around the outside of an element. The margin is not visible on the page; it merely adds a buffer. When we set the margin property to 0, we are indicating that we want NO extra space around the element.</li>
+       <li>The padding property adds space around the content inside an element. When you increase padding, you are actually making the entire element bigger! That is because the padding, while transparent, is located inside the element, whereas the margin is the transparent buffer outside an element.</li>
      </ul>
       </section>
    
@@ -41,8 +50,15 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
+          <li><li>High-level dynamic programming language that allows users to interact with websites.</li></li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript is case sensitive. This means myVariable is not the same as myvariable.</li>
+          <li>A semicolon at the end of a line indicates where a statement ends. It is only required when you need to separate statements on a single line. However, some people believe it's good practice to have semicolons at the end of each statement.</li>
+          <li>String is a sequence of text known as a string. To signify that the value is a string, enclose it in single quote marks.</li>
+          <li>Number is an actual number. Numbers dont have quotes around them.</li>
+          <li>Boolean	is a True/False value. The words true and false are special keywords that don't need quote marks.</li>
+          <li>Array is a structure that allows you to store multiple values in a single reference.</li>
         </ul>
       </section>
     </main>
