--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li><li>High-level dynamic programming language that allows users to interact with websites.</li></li>
+          <li>High-level dynamic programming language that allows users to interact with websites.</li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>JavaScript is case sensitive. This means myVariable is not the same as myvariable.</li>
